force-app/main/default/objects/AccountOwnerTeam__mdt/AccountOwnerTeam__mdt.object-meta.xml
<CustomObject>
    <description>Allows for account owners and teams to be set up and easily changed without going into apex and changing the code. it also simplifies the code, reducing the if statements</description>
    <label>AccountOwnerTeam</label>
    <pluralLabel>AccountOwnerTeams</pluralLabel>
</CustomObject>