force-app/main/default/objects/AccountOwnerTeam__mdt/fields/AccountType__c.field-meta.xml
<CustomField>
    <fullName>AccountType__c</fullName>
    <label>AccountType</label>
    <length>200</length>
    <type>Text</type>
</CustomField>