force-app/main/default/objects/AccountOwnerTeam__mdt/fields/Director__c.field-meta.xml
<CustomField>
    <fullName>Director__c</fullName>
    <label>DirectorField</label>
    <length>200</length>
    <type>Text</type>
</CustomField>