force-app/main/default/objects/AccountOwnerTeam__mdt/fields/Manager__c.field-meta.xml
<CustomField>
    <fullName>Manager__c</fullName>
    <label>Managerfield</label>
    <length>200</length>
    <type>Text</type>
</CustomField>