force-app/main/default/objects/AccountOwnerTeam__mdt/fields/Owner__c.field-meta.xml
<CustomField>
    <fullName>Owner__c</fullName>
    <label>OwnerField</label>
    <length>200</length>
    <type>Text</type>
</CustomField>