force-app/main/default/objects/AccountOwnerTeam__mdt/fields/TeamMemberFieldNames__c.field-meta.xml
<CustomField>
    <fullName>TeamMemberFieldNames__c</fullName>
    <description>comma separated list of field names to be added to the Account Team (And thus Opp Team). These fields correspond to  the State object</description>
    <label>TeamMemberFieldNames</label>
    <length>255</length>
    <type>Text</type>
</CustomField>